# pedestrian-companion-robot

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  env.example  pyproject.toml
.cursor/skills/action-connector-implementation/: SKILL.md
.cursor/skills/background-implementation/: SKILL.md
.cursor/skills/background-testing/: SKILL.md
.cursor/skills/fuser-implementation/: SKILL.md
.cursor/skills/llm-implementation/: SKILL.md
.cursor/skills/provider-implementation/: SKILL.md
.cursor/skills/provider-testing/: SKILL.md
.cursor/skills/sensor-implementation/: SKILL.md
.github/: pull_request_template.md
config/: exaone_ollama.json5  exaone_vllm.json5  test_gui.json5
docs/: 20260107_OM_Integration_Diagrams.drawio  20260125_OM_Integration_Diagrams.drawio  OM1_Platform_Module_Arch.md  SqD_Audio_v2.drawio  SqD_Speaker_v2.drawio  VENDOR_CODE_ANALYSIS.md  VENDOR_INTEGRATION_DESIGN.md
src/actions/move/: interface.py
src/actions/move/connector/: move_connector.py
src/actions/speak/: interface.py
src/actions/speak/connector/: speak_connector.py  tts_connector.py
src/backgrounds/plugins/: GUI_bg.py  audio_bg.py  bev_occupancy_grid_bg.py  location_bg.py  pointcloud_bg.py  realsense_camera_bg.py  segmentation_bg.py  speaker_bg.py  stt_bg.py  tts_bg.py  unitree_go2_bg.py
src/inputs/plugins/: location_sensor.py  sound_sensor.py  vision_sensor.py
src/llm/plugins/: exaone_llm.py
src/providers/: __init__.py  audio_provider.py  bev_occupancy_grid_provider.py  gnss_provider.py  location_provider.py  om1_speech.py  pointcloud_provider.py  realsense_camera_provider.py  realsense_sdk.py  rtk_provider.py  segmentation_provider.py  singleton.py  speaker_provider.py  stt_provider.py  stt_test.py  tts_provider.py  unitree_go2_provider.py  uwb_provider.py  vad.py
src/providers/location_provider/gnss_provider/: gnss_provider.py  ubx_thread.py
src/runtime/multi_mode/: config.py  cortex.py
system_hw_test/: unitree_go2_provider_hw_test.py
tests/: README_TESTING.md  conftest.py
tests/actions/speak/: test_speak_connector.py  test_tts_connector.py
tests/backgrounds/: test_audio_bg.py  test_bev_occupancy_grid_bg.py  test_location_bg.py  test_pointcloud_bg.py  test_realsense_camera_bg.py  test_segmentation_bg.py  test_speaker_bg.py  test_stt_bg.py  test_tts_bg.py  test_unitree_go2_bg.py
tests/inputs/plugins/: test_location_sensor.py  test_sound_sensor.py  test_vision_sensor.py
tests/integration/: audio_stt.py  test_exaone_server.py  test_fuser_llm_pipeline.py  test_tts_speaker_integration.py
tests/llm/plugins/: test_exaone_llm.py
tests/providers/: audio.py  audio_stt.py  preview_realsense_camera_provider.py  test_audio_provider.py  test_bev_occupancy_grid_provider.py  test_pointcloud_provider.py  test_realsense_camera_provider.py  test_segmentation_provider.py  test_speaker_provider.py  test_stt_provider.py  test_tts_provider.py  test_unitree_go2_provider.py
(+4 files in other folders)
